<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context=".views.fragments.WeightInputFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_time"/>

        <TextView
            android:id="@+id/date_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:background="@drawable/date_text_background"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight_in_lbs"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="2">

            <EditText
                android:id="@+id/weight_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:layout_marginRight="2dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/reduce_weight"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/add_weight"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/cancel"
            android:visibility="gone"/>

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/delete"
            android:visibility="gone"/>

        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/add_entry"/>

    </LinearLayout>

    <Button
        android:id="@+id/weight_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/view_history_text"/>

</LinearLayout>
